# [project]
# name = "heliohypy"
# version = "0.0.1"

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
# build-backend = "setuptools/build_meta"
# [tool.setuptools.packages.find]
# # All the following settings are optional:
# where = ["src", "python"]  # ["."] by default

# [projects.scripts]
# make_tracklets = "heliohypy:make_tracklets_py"